<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/gradient_resource"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:background="@drawable/gradient_for_org_view"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camaraderie_header_for_update_user">

        <EditText
            android:id="@+id/name_field_for_update_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            android:textColor="#9C9C9C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_field_for_update_user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/address"
            android:textColor="#9C9C9C"
            app:layout_constraintEnd_toEndOf="@+id/email_field_for_update_user"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_field_for_update_user"
            app:layout_constraintTop_toBottomOf="@+id/email_field_for_update_user" />

        <EditText
            android:id="@+id/email_field_for_update_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="Email"
            android:textColor="#9C9C9C"
            app:layout_constraintEnd_toEndOf="@+id/name_field_for_update_user"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name_field_for_update_user"
            app:layout_constraintTop_toBottomOf="@+id/name_field_for_update_user" />

        <EditText
            android:id="@+id/phone_field_for_update_user3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:text="Phone Number"
            android:textColor="#9C9C9C"
            app:layout_constraintEnd_toEndOf="@+id/address_field_for_update_user2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/address_field_for_update_user2"
            app:layout_constraintTop_toBottomOf="@+id/address_field_for_update_user2" />

        <HorizontalScrollView
            android:id="@+id/scrollview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:padding="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_password_for_user_profile">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_button_for_user_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B06CF9CC"
                    android:fontFamily="@font/cambria"
                    android:text="Confirm"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.512"
                    app:strokeWidth="3.5dp" />

                <Button
                    android:id="@+id/cancel_button_for_user_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8FE5E4FF"
                    android:fontFamily="@font/cambria"
                    android:text="Back"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.087"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.513"
                    app:strokeWidth="3.5dp" />

                <Button
                    android:id="@+id/guidelines_button_for_user_profile3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8FE5E4FF"
                    android:fontFamily="@font/cambria"
                    android:text="Guidelines"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.869"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.651"
                    app:strokeWidth="3.5dp" />

                <Button
                    android:id="@+id/Delete_button_for_user_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B0F96C6E"
                    android:fontFamily="@font/cambria"
                    android:text="Delete Profile"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    app:strokeWidth="3.5dp" />

                <Button
                    android:id="@+id/refreshNotificationsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8FE5E4FF"
                    android:fontFamily="@font/cambria"
                    android:text="Refresh Notifications"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:strokeWidth="3.5dp" />

                <Button
                    android:id="@+id/notificationPermissionsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#8FE5E4FF"
                    android:fontFamily="@font/cambria"
                    android:text="Notification Settings"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:strokeWidth="3.5dp" />
            </LinearLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/admin_button_for_user_profile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#8FE5E4FF"
            android:fontFamily="@font/cambria"
            android:text="Admin"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/admin_password_for_user_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/admin_password_for_user_profile"
            app:layout_constraintTop_toTopOf="@+id/admin_password_for_user_profile"
            app:layout_constraintVertical_bias="0.0"
            app:strokeWidth="3.5dp" />

        <EditText
            android:id="@+id/admin_password_for_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/cambria"
            android:hint="Admin Passcode"
            android:inputType="numberPassword"
            android:textColor="#9C9C9C"
            android:textColorHint="#9C9C9C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geoSwitch" />

        <Switch
            android:id="@+id/geoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/cambria"
            android:text="Enable Geolocation"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_field_for_update_user3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/camaraderie_header_for_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cambria_italic"
        android:text="Camaraderie"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>